# vala-sample

./: CMakeLists.txt  Makefile.am  TODO  configure.ac
src/: CMakeLists.txt  Makefile.am  calculator.vala  main.vala
test/: CMakeLists.txt  Makefile.am  calculator_test.vala
